tests/mir/valid/borrows.vit
space tests/mir/valid/borrows

proc keep(borrow value: int) -> int {
  give value;
}

proc main() -> int {
  let value = 1;
  let kept = keep(value);
  give value + kept;
}
