tests/mir/invalid/bad_borrow.vit
space tests/mir/invalid/bad_borrow

proc keep(borrow value: int) -> int {
  give value;
}

proc main() -> int {
  give keep(1);
}
